Add a readme update about SASS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		</title>
 		<meta name="description" content="This is the description of your website. The first 150-160 characters are what will show up on a Google Search Results Page when you publish it.">
 
+		<link rel="stylesheet" href="style/css/style.css" type="text/css" />
 		<!-- Favicons for browser tabs and sharing preview -->
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -32,6 +33,7 @@
       <h3>New update 6:58!</h3>
 		</header>
 		<main>
+			<h1>Hello</h1>			
 			<p>My Website</p>
 			<br/>
 			<br/>
