--- a/week-7/CSS-animations/index.html
+++ b/week-7/CSS-animations/index.html
@@ -11,8 +11,11 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <body>    
+    <div class="sky">
+      <div class="sun">
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
